.provarCaches/00D410000011HE0EAM/objects/asp04__Asperato_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>asp04__Direct_Debit_Lead_Time__c</fullName>
        <inlineHelpText>How many days in advance of the payment date should a direct debit payment be requested?</inlineHelpText>
        <label>Default Direct Debit Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>asp04__Live_Server__c</fullName>
        <defaultValue>&quot;https://live.protectedpayments.net&quot;</defaultValue>
        <label>Live Server</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Paypage_endpoint__c</fullName>
        <defaultValue>&quot;/PMWeb1&quot;</defaultValue>
        <label>Paypage endpoint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Repeat_Endpoint__c</fullName>
        <defaultValue>&quot;/PMRepeatJson&quot;</defaultValue>
        <label>Repeat Endpoint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Test_Server__c</fullName>
        <defaultValue>&quot;https://test.protectedpayments.net&quot;</defaultValue>
        <label>Test Server</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Asperato Settings</label>
    <pluralLabel>Asperato Settings</pluralLabel>
</CustomObject>